# CNC_Generator

./: .gitignore  cncsample.txt  gcodes.py  main.py  pyproject.toml
