[tool.poetry]
name = "repl_python3_cnc-code-translator"
version = "0.1.0"
description = ""
authors = ["RyanSmith85 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
ordereddict = "^1.1"
importlib-metadata = "^4.11.4"
attr = "^0.3.1"
Cython = "^0.29.30"
docutils = "^0.18.1"
Sphinx = "^5.0.1"
lxml = "^4.9.0"
ipywidgets = "^7.7.0"
railroad = "^0.5.0"
toml = "^0.10.2"
zipp = "^3.8.0"
tornado = "^6.1"
Brotli = "^1.0.9"
python-ntlm = "^1.1.0"
cryptography = "^37.0.2"
keyring = "^23.6.0"
HTMLParser = "^0.0.2"
lockfile = "^0.12.2"
ipython = "^8.4.0"
Jinja2 = "^3.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
